# D3PIA

./: .gitignore  README.md  calculate_flops.py  command.sh  cp.sh  generate_song_list.py  index.html  index_before_style_change.html  install_midisym.sh  main_cli.py  main_cli_pop909.py  pr_mat_to_midi.py  pyproject.toml  reinstall_midisym.sh  scp.sh
configs/: D3PIA_default.yaml  D3RM_cli.yaml  D3RM_large_cli.yaml  D3RM_large_cli_pop909.yaml  D3RM_large_cli_pop909_256.yaml  D3RM_large_cli_pop909_SAT.yaml  D3RM_large_cli_pop909_bridge.yaml  D3RM_large_cli_pop909_chord_enc.yaml  D3RM_large_cli_pop909_no_dilation.yaml
d3pia/: datamodule.py  dataset.py  evaluate.py  external_encoder.py  model.py  module.py
d3pia/callbacks/: ema.py
d3pia/diffusion/: natten_diffusion.py
debug/: debug_data.py  debug_data_pop909.py  debug_sample_arr_data.py
demo_src/: songs_with_segments.json  tempos.json
demo_src/subjective_eval_tables/: chord_accuracy_pivot.csv  chord_similarity_pivot.csv  correctness_pivot.csv  harmony_pivot.csv
logs/2025-02-21T00-01-12/: config.yaml
logs/2025-03-04T19-05-17/: config.yaml
midisym/: midi_messages.txt
midisym/midisym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reference_arrangement_style/2bars/: 332.mid  arpeggio_1351.mid  arpeggio_151.mid
reference_arrangement_style/8bars/: 332.mid  arpeggio_1351.mid  arpeggio_151.mid  bossa_rhythm.mid  funk_riff.mid
transcription/: datamodule.py  dataset.py  decoder.py  external_encoder.py  module.py  style_encoder.py
transcription/diffusion/: natten_diffusion.py  self_attention_diffusion.py  (+1 more)
(+17441 files in other folders)
